Fin Joueurs Début Rencontres

--- a/WindowsFormsLigueScrabble/JoueurForm.resx
+++ b/WindowsFormsLigueScrabble/JoueurForm.resx
@@ -121,7 +121,7 @@
   <data name="buttonAjouterJoueur.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAZgAAAGYCAYAAAB/O/RVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAy
-        vAAAMrwB1w6hmwAAFzBJREFUeF7t3U2IXMeBwPGx5fHKyzoYZzEhywbBaIxYAlbmIxaDLU9kxx9xkvHB
+        tgAAMrYBjHpqdwAAFzBJREFUeF7t3U2IXMeBwPGx5fHKyzoYZzEhywbBaIxYAlbmIxaDLU9kxx9xkvHB
         AREIyAeB0SEJhIAIASkQYxIIDovBkItOIZCLcwk+5KBTMOTivfmYo4466jhb1V0TyT01pS7p1Xuvp38F
         P/wxM5L6dav+/V6993rFKI/V0xvnHju9tftFm1fDP68DS2Rt4/Xwzy/MBSundk+mqcIwDo/V9e2zJ9Y2
         35q8gE5vfhx8FuwD1Fhd3/xn+OfNOJesrm9cmgTIWJ5x8szZU/GJDy+EG+GFICRAcyk8H6+e3vhpfEOb
@@ -223,10 +223,128 @@
         b1R3hWR2rKz8Px9tXpH7FhYWAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="buttonTerminer.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAABYsAAAGYCAYAAAADe708AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAy
+        vwAAMr8BereA9gAAGiVJREFUeF7t3U9onNXewPGBZEpcCMWFBBcyMDNlEME4fzSE2sa02tZcTRe9UASh
+        LgrShRYuQpAL9oJFFKTyIghuupILbtLNpYu7yEoKbvruuuwyyyyzzHvO5MnbZnL6RzPPM8/MfH7wub11
+        JjPznMnq28N5KubpU220F2cb3eWDOuvhzxsAAAAAQEnV2+fDnwe6XqW2PJdlP2MOT7XZW5ipdy72f4Ea
+        nY3gfrALAAAAAEyuarPzMPy5Gbtgtdm+0o/JZnpmrrVQi198+EW4HX4RRGEAAAAA4IAsIm9UG+3rcaNp
+        lhbN2E+tNz9T716eqXd+zr7k5C8AAAAAAMATbFeb7X9Xm53Pjp3otLLyaMZh4u7h8AWuBw8e+0IBAAAA
+        AI5sb1Nq95ZwXNapLRzfO1cknjGS/hIBAAAAAIbsQTyuIp5wkJVKM6qJdzSMW8DDl7Iz8CUBAAAAABRp
+        M25ordSW57J8aYqYmXrnYlh8N6gDAAAAAMpma2+3sWic68Qy70Z1AAAAAMAY2J5tdG/EI3SzvGmOPLXl
+        uVjiRWIAAAAAYAzFaHzLucZHnL0ziUViAAAAAGDsbQfrWfo0zz213nxYuI3HFhIAAAAAYBLcrzbai1kJ
+        NU+bsFjrQazsqYUEAAAAABh7M/XOz84zfsLEmh4W6cHgogEAAAAATKjtarN9JUukJk5YlLibOLVYAAAA
+        AACTbsMu47AAs43u3cTiAAAAAABMjWqz83BqzzLOjp3YGlwUAAAAAIAptVNttK9nCXU6Jly0YycAAAAA
+        ANKm4FiK2vJcvNCBCwcAAAAA4DHxWIq51kItK6sTNv3ziTubgxcNAAAAAEDSdrXZW8gK64RMrTcfLuz+
+        wIUCAAAAAPB02xNz47u4VTpumU5cJAAAAAAAz7YzW2+fz5LreE7cIh0uZHvgwgAAAAAA+HN2qs32lSy9
+        jtcIxQAAAAAAwzV2wTgePRE+uFAMAAAAADBc43MkhTOKAQAAAABytVP+m97VFo6HD3p/4IMDAAAAADBc
+        2/Eo4KzMlmxqy3PhA24OfOCx98Jr3d3W2tIh5758d3f1qxUAAAAAoGRe//vJQz3vpd5byf43zuIJD/Gk
+        h6zQlmdmG927qQ88LvajcPxluvz92d3Pf72w+8Mfa7v/878XAQAAAIAJ8Y/fLux++tP7/Q745scnxz4i
+        x2AcT3zIMu3oZ7bRvZH6oGUW43D8F4a1r1f6vyCpXxwAAAAAYPL98z+r/Q2kMR6/+EYv2RNLbiNLtaOd
+        2UZ3OfHhSqt35Z3+vxykfikAAAAAAK7+cq7fEeOG01RjLKNqo309S7YjmlpvPnyQrcEPVjYvL73d/5eB
+        bzY/TH75AAAAAACDvvv9o91Pfnxvt/7BUrI7lsxOtdFezMpt8RM+QKlvaPfq2cX+vwKkvmgAAAAAgOe1
+        fme1f0xFqkOWxcjOLy7zOcWx9F+7LRIDAAAAAMMVzzeOR1SkumRJFHt+cVnPKY6HT8fjJlJfIgAAAADA
+        sMTNqq+cXkx2ylEr7vzi2vJceMMHgx9g1JaunnImMQAAAABQmB/+WNtd+3qljDfC24n3m8uKbn4T3mh9
+        4I1HKu4mduQEAAAAADAq8WiKeP+0VL8coXyPo5hrLdTCm+wMvOnIxLOJ7SYGAAAAAEYt7jI+de10smOO
+        TL19Pku7w5/wBhuH3nBEzn35bvJLAQAAAAAYlU9/er9/GkKqaRat2uw8jMcKZ3l3eDNT71xMvWHR4vkf
+        V39x7AQAAAAAUE7xWIqXl95O9s3idW9kiXdIs3dTu63Db1SsWOQ///VC8gsAAAAAACiLf/33b7uvnC7F
+        OcY78XjhrPQefaqN9vXEmxQqlvj1O6vJhQcAAAAAKJvvfv+oLDe+G9LN7kqwqziG4ljiUwsOAAAAAFBW
+        8cZ39Q+Wkt2zSJVabz4rvn99Rr2rOB49YUcxAAAAADCuyrHDuHsrS75/cUa8qzjezM4ZxQAAAADAuIsn
+        J4z4pnc7R9pdPFPvXEy8aGGu/nIuubAAAAAAAOMmBuN4kkKqhRbjCLuLwwvcP/yCxVj9aiW5oAAAAAAA
+        4yqepJDqoQX5a7uLR7mruLW2lFxIAAAAAIBxFzfKprpoMbo3sgT8/BN+cOPwC+Xvpd5bu99sfphcRAAA
+        AACASRA3zKb6aN6qzc7DLAE/59R68+EHdwZfqAhuaAcAAAAATLq4YXZ05xd3l7MS/OypNjufpV8kX6eu
+        nU4uHAAAAADApLl080yyk+Ztpt75OUvBz57wA/cGXyBvjp8AAAAAAKbNq2cXk700Z9uV2vJcloOfPMdO
+        dFqJH87dJz++l1wsAAAAAIBJtX5nNdlL8zZT717OkvCTJ94NL/XDeap/sJRcKAAAAACASReP501105xt
+        ZEn4yRPvhpf4wVy5qR0AAAAAMK3i8bwvvNZNttMc7VRqC8ezLHx45loLtcQP5SqeyZFaIAAAAACAabHy
+        xXKyn+Zppt65mKXhw1Nttq+kfihPV385l1wcAAAAAIBpMZrdxd1bWRo+PNVm53b6h/JhVzEAAAAAwJ7e
+        lXeSHTVH97M0fHjCg1sDT87VJz++l1wUAAAAAIBps35nNdlR81Sp9eazPPxoqs3eQurJeYlbqr/7/aPk
+        ogAAAAAATKNXTi8me2pe4tHEWSJ+NNVG+3rqyXmJW6pTiwEAAAAAMK3Wvl5J9tS8xKOJs0T8aMIDG4NP
+        zNO1225sBwAAAADwuHiju1RPzUu12XmYJeJHEx4o7LziF9/oJRcCAAAAAGDatdaWkl01L5XawvEsE4cJ
+        f0k9KS9vfnwyuQgAAAAAANNu9auCj6JotBezUtw/r3gx9aS8XLp5JrkIAAAAAADT7vNfLyS7al6qzc5n
+        WSquVOJfUk/Ky/qd1eQiAAAAAABMux/+WNt94bVusq3mo3srS8XxvOLurfSThs95xQAAAAAAT1fsucXd
+        u1kq7sfiu+knDZ/zigEAAAAAnq7gc4u3slQcY3Fna+DB3MSLTF08AAAAAAB7rv5yLtlX81KpLRyvxP9J
+        PZiXT396P3nxAAAAAADs+ed/VpN9NS/VRnuxMtdaqKUezIub2wEAAAAAPFvBN7lbLjwWxzv5pS4cAAAA
+        AIBHXjm9mGyseZipdy9X4vbi1IN5eHnp7eRFAwAAAABw0Jsfn0x21jxUm+0rlbi9OPVgHlprS8mLBgAA
+        AADgoKWrp5KdNQ97sbjePp96MA9iMQAAAADA8zn35bvJzpqT9UosxokHchG3TacuGgAAAACAg1a/Wkl2
+        1nx0bxQai+O26dRFAwAAAABwUOGxOPyf9cMP5EMsBgAAAAB4Ppdunkl21nz0Y3H3RvrB4YtnbKQuGgAA
+        AACAg0aws7i4WBwvLnXRAAAAAAAcJBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUA
+        AAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAA
+        AAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAA
+        gFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARi
+        MQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMA
+        AAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAA
+        AIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAA
+        YjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjF
+        AAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAA
+        AABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAA
+        AGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACI
+        xQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYD
+        AAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAA
+        AACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAA
+        iMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAW
+        AwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwA
+        AAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAA
+        AARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAg
+        FgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgM
+        AAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAA
+        AAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAA
+        EIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBY
+        DAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEA
+        AAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAA
+        AACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABA
+        IBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIx
+        AAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAA
+        AAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAA
+        ACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUAAAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACB
+        WAwAAAAAgFgMAAAAAIBYDAAAAABAIBYDAAAAACAWAwAAAAAgFgMAAAAAEIjFAAAAAACIxQAAAAAAiMUA
+        AAAAAARiMQAAAAAAYjEAAAAAAGIxAAAAAACBWAwAAAAAwGTH4lPXTicvGgAAAACAg9a+LjgWV5udz9IP
+        Dt/S1VPJiwYAAAAA4KBLN88kO2s++rG4fSX94PD1rryTvGgAAAAAAA4q/BiKmXr3cvrB4WutLSUvGgAA
+        AACAg0ZxZvFy+sHhE4sBAAAAAJ5PPNY31VnzEI8rLjQWv3p2MXnRAAAAAAAcVGwsbl+pHDvRaaUezMML
+        r3WTFw0AAAAAwEH1D5aSnTUP/Vg811qopR7MyzebHyYvHAAAAACAR158o5dsrLmot89XKrXefPLBnFy7
+        fS554QAAAAAA7ImbblN9NT/d5Uqc8Jftww/m49LNM8mLBwAAAABgT9x0m+qreYnHFe/H4nuDD+bl1LXT
+        yYsHAAAAAGDP5e/PJvtqTnb6oTjOTL3zc+IJuXj17GLy4gEAAAAA2LPyxXKyr+bkfpaKK5Vqo3098YTc
+        fPf7R8kFAAAAAADgYn/Tbaqt5qHabP87S8WVSrzTXepJebn6i5vcAQAAAACkxM22qa6ao/UsFYep9eYT
+        T8jN0tVTyUUAAAAAAJh2cbNtqqvmZabeuZiV4r0J/3F78El5eXnp7eQiAAAAAABMu1PXTie7al6Onei0
+        sky8N+E/3ht8Up7+8duF5EIAAAAAAEyrH/5Y233xjV6yqeZkO0vEj2a20b2ReGJu4t38UosBAAAAADCt
+        Pv3p/WRPzdFGlogfzWyju5x4Ym5e6r3Vr+SpBQEAAAAAmEZvfnwy2VPzUm20r2eJ+LGpLc+FB3cGn5yn
+        a7fPJRcEAAAAAGDafLP54e4Lr3WTLTUv1WZvISvEByc8uDn45DzFSp5aFAAAAACAaXPp5plkR83R4fOK
+        96foc4tjJY+1PLUwAAAAAADTIh7ZG4/uTXXUHB0+r3h/ij63OHKjOwAAAABg2o1gV/ETzivenxGcW2x3
+        MQAAAAAw7Uawq/jJ5xXvT7XZuZ36wTzZXQwAAAAATKtPfnwv2U3zVG12HmZJ+MkziqMo4u7i9TuryYUC
+        AAAAAJhU3/3+0Uh2Fcf712VJ+OkTnrx1+IfzVf9gKblYAAAAAACTKp66kOqleZtrLdSyHPz0CU/+dvCH
+        ixC3W6cWDAAAAABg0sTTFlKdtAD3shT87IkHGydeIHdxu7Wb3QEAAAAA0+DVs4vJTpq3arPzWZaCn2/C
+        Dz0YfJEitNYcRwEAAAAATLbVr1aSfbQAO5XawvEsAz/fhB9aH3iRwsSFSi0gAAAAAMC4+/zXC8kuWpCN
+        LAH/ian15sMP7gy8UGHigqUWEgAAAABgXMVjeONxvKkmWoR4BHFWgP/czDa6t1IvWATnFwMAAAAAk+SH
+        P9b6x/CmemhBNrP0+xdmxLuL4wHP3/3+UXJhAQAAAADGyet/P5nsoEWZqXcuZuX3r80odxdHsbTH4p5a
+        XAAAAACAcbB09VSyfxbofpZ8jzAj3l0cxeKeWmAAAAAAgLJb+WI52T2LdORdxfsTXmxj8MWL9ubHJ+0w
+        BgAAAADGShlCcTCEXcXZxDvkhRcc6e7iKO4wdoYxAAAAADAOSnD0RN/QdhXvT3jRbwffZBTc9A4AAAAA
+        KLN4QkI8KSHVN4vXvZsl3iFObXkuvPjW4Tcr3stLb++u31lNfhEAAAAAAKMSN7q21paSXXMEdo6d6LSy
+        wjvciduVE284Ei+81t29/P3Z5BcCAAAAAFC0f/x2Yfel3lvJnjka3RtZ2s1nwpuM/GZ3j+tdecexFAAA
+        AADASK19vZLsl6NSbXYextMisqybz8y1FmrhzUZ+s7vHxVp/7fa55JcEAAAAAJCXeFxu/YPSHDvx/4Z+
+        U7snTXiz9cE3L4PX/35y91///VvySwMAAAAAGJZ42sG5L99NdsoS2MhSbgGzd7O7ewMfoBTiWcarX630
+        7ziY+hIBAAAAAI7i05/eL9nZxAdsVWq9+azkFjPZcRTbAx+kNF58o9ePxs4zBgAAAACG4ZMf39t9eent
+        ZI8sj+5ylnCLnXjuRfoDlUeMxitfLDueAgAAAAD4077Z/HD30s0zYxCJo+6NLN2OZsIHuJX+YOUTD5qO
+        9d9uYwAAAADgSeIRt/GoiTc/PpnsjCW1mSXbEU6Jzy9+kniu8dLVU/0vPP7LQOoXAgAAAACYHrETxo2m
+        sRvG0wpSXbHEtgs/p/hJU/bzi5/lldOLu6eund69/P3Z3c9/vWDnMQAAAABMuNgB42bS2AVjH0x1w3ER
+        jwvOUm05ptrsLYQPtjP4QcdV/NeD1tpS/5cl3ihv39rXK/2o/Ph/AwAAAADKI54xPNjwzn35br/3jcfZ
+        w8+v2mxfyRJtuWa23j4fPuDEBGMAAAAAgPIa8Q3tnjVxy3P6gwMAAAAAMBwlD8X7E7c+py8AAAAAAICj
+        qDY7t7MUOx4TPvT64EUAAAAAAPDXjV0o3p/w4QVjAAAAAIAhGNtQvD+OpAAAAAAAOJqxD8X7k930bmfw
+        AgEAAAAAeJYxuZnd885svX0+XNj24QsFAAAAACBtwkLx/lSbvYVwgYIxAAAAAMAzxCN+s7Q6mXPsRKcV
+        LvTe4IUDAAAAANC3HY/2zZLqhE9teW620b2VWAQAAAAAgGl2r1LrzWcldXomu/GdYykAAAAAABqdb7N0
+        Op0z11qohUVwLAUAAAAAMK22Zuvt81kynfLpH0vR+XZggQAAAAAAJlz37lQeO/GsqTZ7C2GB7DIGAAAA
+        ACbd1vTcxO4IU222r4TFcpYxAAAAADCJvo2nLWQ51DxzagvHZ+qdnxMLCQAAAAAwjjaPnei0sgJq/uxU
+        G+3FuIgDiwoAAAAAMBaqzc7DmXr3cpY8zVEnO894Y3ChAQAAAABK6r5ziXOcudZCrdrs3E4sPAAAAABA
+        GWzO1tvns6Rpcp9ab3620b0VFn5r4IsAAAAAAChctdn+92yju5wVTDOKied97H0R6S8JAAAAACAn96rN
+        zmeV2sLxLFeaUkytN19ttK+HL+jBwBcGAAAAADAsD2Yb3RvxyNysTJoyT3ZDvPXwpd0Nf24/9kUCAAAA
+        APwZO1lnXI/dMUuQZlwnfonZruONQDwGAAAAAJ5mM+4erjbai1liNJM6x050WvGOhP0vfO+843sDvwwA
+        AAAAwOSLR0rcjZ2wf280cdjsTz8iN7rLe/rHWNwAAAAAACbE3gbSZVF4cCqV/wN3sbAWxYf3xwAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
   <data name="buttonSupprimerJoueur.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAZgAAAGYCAYAAAB/O/RVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAy
-        vAAAMrwB1w6hmwAAFCZJREFUeF7t3UuIHNe5wPFJ5DEyXIMxFxMCNwyMxogQsDyPWAy2PJEfsuMk44UD
+        tgAAMrYBjHpqdwAAFCZJREFUeF7t3UuIHNe5wPFJ5DEyXIMxFxMCNwyMxogQsDyPWAy2PJEfsuMk44UD
         wmCQFwKjRWIwBhECUiDGJBAcLgZDNlqFQDbKJniRhVbB4I3vzksvtdRylnPP110TyT1nNN1SfVXVM78D
         P/yYl7p6dP5ddaqqF4z7j8VTq2cfObW+9W1rV8s/rwPHyPLqa+Wf35oLFpa2TjZThWHsH4srG2dOLK+9
         OfoFOrV2s/iq2AWYxeLK2jfln7diLllcWb00CpBxfMbJ02eW4okvvwg3yi+CkADpmvDcXDy1+n68oG2m
@@ -318,7 +436,7 @@
   <data name="buttonModifierJoueur.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAZgAAAGYCAYAAAB/O/RVAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAy
-        vAAAMrwB1w6hmwAAI4ZJREFUeF7t3XuUFdWd6HGgeaoooiCg0EjLQ2lep7uhbaBpmoe8G3wSM0Y0ci+X
+        tgAAMrYBjHpqdwAAI4ZJREFUeF7t3XuUFdWd6HGgeaoooiCg0EjLQ2lep7uhbaBpmoe8G3wSM0Y0ci+X
         ZCKoaKtkxEkco+jF3OVaJlkzw0zWTMw4MyHJrBlm3cwN87jGJHNvvP/lT/70T/70z7r1O6dK+vHrPqf3
         2VV776rvXuszRrup82hmf7tOVe2axBh/TL2n0t3S1tE31NR7Ogbjf54DUCYb9sT/HDYXTGrdNjOZKhiM
         0WPa8q718V+Uw7FzcUwutbRVPo0DEgHABF2N55ArMpdMW145Vg0Qozxjxsp1S+UHH/9FuEhIAOREwnMp
