Validations joueurForm completees

--- a/WindowsFormsLigueScrabble/JoueurForm.resx
+++ b/WindowsFormsLigueScrabble/JoueurForm.resx
@@ -224,7 +224,7 @@
   <data name="buttonTerminer.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABYsAAAGYCAYAAAADe708AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAy
-        uwAAMrsBhUoH5AAAGbNJREFUeF7t3T+IXOX6wPGFnQlrIQQLCRYyMGfCIhdc58zossRkjdEk7tVN4YUg
+        tgAAMrYBjHpqdwAAGbNJREFUeF7t3T+IXOX6wPGFnQlrIQQLCRYyMGfCIhdc58zossRkjdEk7tVN4YUg
         CLEISAoNXIRFLpgLBlGQyEUQbFLJhdvE5pLiFltJwCa/zjJlyi23nB/PbDbR952YaPac+fd54HPBO7N/
         zpmtvnl5zsKC+d1pFt3VRtFb/61yq1H0rgAAAAAAE6rdPZN2vYXW+lLa/4y5P81Of2WxXZ7b+yMqbzSK
         8najKAcAAAAAwOxqdso7jaLcji7Y7HQvDGOymZ9ZWl5pxQff7JTXRWEAAAAAIHUvIt9oFt3LcdA0bYxm
@@ -583,4 +583,10 @@
         RwIAE6v9oTpESPTx/wFAYR6YP5ScEgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="timerDuree.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="timerFlash.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>120, 17</value>
+  </metadata>
 </root>
