Il faut regler la form joueur pour modifier un joueur existant

--- a/WindowsFormsLigueScrabble/JoueurForm.resx
+++ b/WindowsFormsLigueScrabble/JoueurForm.resx
@@ -589,4 +589,120 @@
   <metadata name="timerFlash.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>120, 17</value>
   </metadata>
+  <data name="buttonEffacer.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAABYsAAAGYCAYAAAADe708AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAy
+        tgAAMrYBjHpqdwAAGbNJREFUeF7t3T+IXOX6wPGFnQlrIQQLCRYyMGfCIhdc58zossRkjdEk7tVN4YUg
+        CLEISAoNXIRFLpgLBlGQyEUQbFLJhdvE5pLiFltJwCa/zjJlyi23nB/PbDbR952YaPac+fd54HPBO7N/
+        zpmtvnl5zsKC+d1pFt3VRtFb/61yq1H0rgAAAAAAE6rdPZN2vYXW+lLa/4y5P81Of2WxXZ7b+yMqbzSK
+        8najKAcAAAAAwOxqdso7jaLcji7Y7HQvDGOymZ9ZWl5pxQff7JTXRWEAAAAAIHUvIt9oFt3LcdA0bYxm
+        WqfVP7LY7p1fbJff3fuQsw8fAAAAAOB37DQ73X83O+WHh46Wy2mCNBM8cXp4b6dw+cuIDxYAAAAA4E/b
+        O5TauyYcT+q0Vg7v7RWJHSP5BwgAAAAAUIFfYl1FbDhIk6WpeeKJhnEEvFGUuyM+KAAAAACAumzHgdaF
+        1vpS2jFNhbPYLs95QB0AAAAAMIHu7p02Fo0rnSjzHlQHAAAAAEyBnUbRuxIrdNPOaf7stNaXosSLxAAA
+        AADAFIpofM1e4yecvZ3EIjEAAAAAMPV2GkW5lTZQ86hp9Y80ivLGiBsKAAAAADDNbjeL7mqaRM2Iibp+
+        r7KnNxEAAAAAYCYstsvv7DN+yERNbxTlL+lNAwAAAACYUTvNTvdC2krneu6dJk5vFAAAAADAPLjhlHFr
+        5XCj6N0ccXMAAAAAAOZGs1PemdtdxvfWTtxNbwoAAAAAwJzabRbdy2lLnemxdgIAAAAA4KHmYC1Fa30p
+        LnTExQMAAAAAcE+spVhaXmmliXU2ZrifuNxOLxoAAAAAgJF2mp3+Sppap3ta/SONorw94mIBAAAAAHi4
+        nZl58F0clY4j0yMuEgAAAACAR9tttLtn0vY6VRNHpKN8j7g4AAAAAAAe326z072QNtipGKEYAAAAAOBg
+        TV0wjtUTQjEAAAAAwIGbnpUUdhQDAAAAAFRqd/IfetdaOdwoytsjfnkAAAAAAA7OTqwCThPtZExrfalR
+        lNsjfump9tQLvcHy5lrm9CevDTY+PQkAAAAATJi//O1Y1vOe6b+ctb9pFxseYtNDmmrHPo2idzP9ZafJ
+        fhSOP6bzX50afPTD2cHXP28O/vV/5wAAAACAGfH3/5wdfPDtm8MO+NJ7x6Y+Ikcwjo0Paa8d2zSK3pX0
+        l5x0EYfjXxg2Pzs5/ANJ/2gAAAAAgPnwj/9uDA+QRjx++sV+1hKnwI202Y5lGkVvfcQvN7H6F14d/stB
+        +gcBAAAAABAufn962BHjwGnaFydVs+heTtttvdPqH2kU5d30F5s0z669MvyXgc+3384+eAAAAACAUb78
+        6Z3B+9+8MWi/tZY1xwm02yy6q2nCrW0m/YF2z59aHf4rQPohAwAAAAD8EVs/bgzXVKQNcpKMbX/xJO8p
+        jtJ/6bpIDAAAAAAcrNhvHCsq0iY5QerdXzype4pj+XSsm0g/QAAAAACAgxSHVZ87sZo1yklQ3/7i1vpS
+        oyh/SX+BcVu7eNxOYgAAAACgNl//vDnY/OzkJD4IbzeeN5em3QOfRlFujfjhYxOnia2cAAAAAADGJVZT
+        xPPT0nY5ZtWuo1haXmlFlR7xg8cidhM7TQwAAAAAjFucMj5+6UTWMMeq3T2TNt4Dm6jR2Q8ck9OfvJZ9
+        IAAAAAAA4/TBt28OtyGkPXMcmp3yTqwVTjvvE89iuzyX/rBxiP0fF7+3dgIAAAAAmEyxluLZtVeytjke
+        vStp632y2Xuo3d38B9UrivxHP5zNbj4AAAAAwCT55//+OnjuxETsMd6N9cJp8v3T0yy6l0f8kFpFid/6
+        cSO76QAAAAAAk+jLn96ZlAffHdDD7ibgVHGE4ijx6c0GAAAAAJhk8eC79ltrWfOs20KrfyRNv394xn2q
+        OFZPOFEMAAAAAEyryThh3LuWtt8/NmM+VRwPs7OjGAAAAACYdrE5YcwPvdt9otPFi+3y3IhvWpuL35/O
+        bioAAAAAwDSKYBybFNIOWp8nOF3cKMrb+Tesx8anJ7ObCQAAAAAwzWKTQtpCa/TnTheP81Tx8uZadhMB
+        AAAAAGZBHJRNm2h9elfSFvzIaRTljfwbVe+Z/suDz7ffzm4gAAAAAMCsiAOzaRutQ7NT3klb8O9Pq38k
+        jiSn36gOHmgHAAAAAMy6ODA7vv3FvfU0CT90mp3yw/wbVO/4pRPZTQMAAAAAmEXvXn09a6R1WGyX36VN
+        +KHTKMpb6TeomvUTAAAAAMC8ef7UatZKa7Cz0FpfSrtwNoeOlssjvrhy73/zRnajAAAAAABm2daPG1kr
+        rcNiu3c+bcPZxNPw0i+sWvuttewmAQAAAADMg1jPmzbTGtxI23A28TS8EV9YKQ+1AwAAAADmVaznfeqF
+        XtZNK7a70Fo5nPbh+7O0vNIa8UWVip0c6c0BAAAAAJgnJz9ez9pp1Rbb5bm0Ed+fZqd7If2Cql38/nR2
+        YwAAAAAA5sl4Thf3rqWN+P40O+X1/Auq41QxAAAAAMCe/oVXs4ZasdtpI74/jaK8O+ILKvP+N29kNwQA
+        AAAAYB5t/biRNdSqLbT6R9JOvNDs9FfSN1YpjlR/+dM72Q0BAAAAAJhXz51YzVpqlWI1cdqKF5pF93L6
+        xirFker0RgAAAAAAzLPNz05mLbVKsZo4bcWxguJG+sYqXbruwXYAAAAAAL8WD7pLW2qVmp3yTtqKa91X
+        /PSL/ewmAAAAAABwbrC8uZY11SottFYOPyjFrZXD6Ruq9NJ7x7IbAAAAAADAucHGpzWvoii6q/dbcfxH
+        +oYqvXv19ewGAAAAAABwbvDRD2ezplqlZqf88EEs7pQfpm+o0taPG9kNAAAAAADg3ODrnzcHT73Qy7pq
+        dXrX7sfi+I/8DdWwrxgAAAAA4PfVu7e4d/PXsfhm/oZq2FcMAAAAAPD7at5bfPdXsbi8O+INlYiLTC8c
+        AAAAAIAHLn5/OmurVVporRxeiP9JX6jSB9++mV04AAAAAAAP/OO/G1lbrVKz6K4uLC2vtNIXquThdgAA
+        AAAAj1bzQ+7Wa4/F8SS/9KIBAAAAAPit506sZn21Kovt3vmFOF6cvlCVZ9deyS4YAAAAAIDcS+8dyxpr
+        VZqd7oWFOF6cvlCV5c217IIBAAAAAMitXTyeNdaq7MXidvdM+kJVxGIAAAAAgMdz+pPXssZaoa2FKMYj
+        XqhEHJtOLxgAAAAAgNzGpyezxlqd3pVaY3Ecm04vGAAAAACAXO2xOI4X5y9UQywGAAAAAHg87159PWus
+        1RnG4t6V/IVqxI6N9IIBAAAAAMiN4WRxfbE4Li69YAAAAAAAcmIxAAAAAABiMQAAAAAAYjEAAAAAAGIx
+        AAAAAABBLAYAAAAAQCwGAAAAAEAsBgAAAABALAYAAAAAIIjFAAAAAACIxQAAAAAAiMUAAAAAAIjFAAAA
+        AAAEsRgAAAAAALEYAAAAAACxGAAAAAAAsRgAAAAAgCAWAwAAAAAgFgMAAAAAIBYDAAAAACAWAwAAAAAQ
+        xGIAAAAAAMRiAAAAAADEYgAAAAAAxGIAAAAAAIJYDAAAAACAWAwAAAAAgFgMAAAAAIBYDAAAAABAEIsB
+        AAAAABCLAQAAAAAQiwEAAAAAEIsBAAAAAAhiMQAAAAAAYjEAAAAAAGIxAAAAAABiMQAAAAAAQSwGAAAA
+        AEAsBgAAAABALAYAAAAAQCwGAAAAACCIxQAAAAAAiMUAAAAAAIjFAAAAAACIxQAAAAAABLEYAAAAAACx
+        GAAAAAAAsRgAAAAAALEYAAAAAIAgFgMAAAAAIBYDAAAAACAWAwAAAAAgFgMAAAAAEMRiAAAAAADEYgAA
+        AAAAxGIAAAAAAMRiAAAAAACCWAwAAAAAgFgMAAAAAIBYDAAAAACAWAwAAAAAQBCLAQAAAAAQiwEAAAAA
+        EIsBAAAAABCLAQAAAAAIYjEAAAAAAGIxAAAAAABiMQAAAAAAYjEAAAAAAEEsBgAAAABALAYAAAAAQCwG
+        AAAAAEAsBgAAAAAgiMUAAAAAAIjFAAAAAACIxQAAAAAAiMUAAAAAAASxGAAAAAAAsRgAAAAAALEYAAAA
+        AACxGAAAAACAIBYDAAAAACAWAwAAAAAgFgMAAAAAIBYDAAAAABDEYgAAAAAAxGIAAAAAAMRiAAAAAADE
+        YgAAAAAAglgMAAAAAIBYDAAAAACAWAwAAAAAgFgMAAAAAEAQiwEAAAAAEIsBAAAAABCLAQAAAAAQiwEA
+        AAAACGIxAAAAAABiMQAAAAAAYjEAAAAAAGIxAAAAAABBLAYAAAAAQCwGAAAAAEAsBgAAAABALAYAAAAA
+        IIjFAAAAAACIxQAAAAAAiMUAAAAAAIjFAAAAAAAEsRgAAAAAALEYAAAAAACxGAAAAAAAsRgAAAAAgCAW
+        AwAAAAAgFgMAAAAAIBYDAAAAACAWAwAAAAAQxGIAAAAAAMRiAAAAAADEYgAAAAAAxGIAAAAAAIJYDAAA
+        AACAWAwAAAAAgFgMAAAAAIBYDAAAAABAEIsBAAAAABCLAQAAAAAQiwEAAAAAEIsBAAAAAAhiMQAAAAAA
+        YjEAAAAAAGIxAAAAAABiMQAAAAAAQSwGAAAAAEAsBgAAAABALAYAAAAAQCwGAAAAACCIxQAAAAAAiMUA
+        AAAAAIjFAAAAAACIxQAAAAAABLEYAAAAAACxGAAAAAAAsRgAAAAAALEYAAAAAIAgFgMAAAAAIBYDAAAA
+        ACAWAwAAAAAgFgMAAAAAEMRiAAAAAADEYgAAAAAAxGIAAAAAAMRiAAAAAACCWAwAAAAAgFgMAAAAAIBY
+        DAAAAACAWAwAAAAAQBCLAQAAAAAQiwEAAAAAEIsBAAAAABCLAQAAAAAIYjEAAAAAAGIxAAAAAABiMQAA
+        AAAAYjEAAAAAAEEsBgAAAABALAYAAAAAQCwGAAAAAEAsBgAAAAAgiMUAAAAAAIjFAAAAAACIxQAAAAAA
+        iMUAAAAAAASxGAAAAAAAsRgAAAAAALEYAAAAAACxGAAAAACAIBYDAAAAACAWAwAAAAAgFgMAAAAAIBYD
+        AAAAABDEYgAAAAAAxGIAAAAAAMRiAAAAAADEYgAAAAAAglgMAAAAAIBYDAAAAACAWAwAAAAAgFgMAAAA
+        AEAQiwEAAAAAEIsBAAAAABCLAQAAAAAQiwEAAAAACGIxAAAAAABiMQAAAAAAYjEAAAAAAGIxAAAAAABB
+        LAYAAAAAQCwGAAAAAEAsBgAAAABALAYAAAAAIIjFAAAAAACIxQAAAAAAiMUAAAAAAIjFAAAAAAAEsRgA
+        AAAAALEYAAAAAACxGAAAAAAAsRgAAAAAgCAWAwAAAAAgFgMAAAAAIBYDAAAAACAWAwAAAAAQxGIAAAAA
+        AMRiAAAAAADEYgAAAAAAxGIAAAAAAIJYDAAAAACAWAwAAAAAgFgMAAAAAIBYDAAAAABAEIsBAAAAABCL
+        AQAAAAAQiwEAAAAAEIsBAAAAAAhiMQAAAAAAYjEAAAAAAGIxAAAAAABiMQAAAAAAQSwGAAAAAEAsBgAA
+        AABALAYAAAAAQCwGAAAAACCIxQAAAAAAiMUAAAAAAIjFAAAAAACIxQAAAAAABLEYAAAAAACxGAAAAAAA
+        sRgAAAAAALEYAAAAAIAgFgMAAAAAIBYDAAAAACAWAwAAAAAgFgMAAAAAEMRiAAAAAADEYgAAAAAAxGIA
+        AAAAAMRiAAAAAACCWAwAAAAAgFgMAAAAAMCMx+Ljl05kFwwAAAAAQG7zs5pjcbNTfpi/UI21i8ezCwYA
+        AAAAIPfu1dezxlqdYSzuXshfqEb/wqvZBQMAAAAAkKt9DcViu3c+f6Eay5tr2QUDAAAAAJCrPRY3it56
+        /kI1xGIAAAAAgMcTa33TxlqVWFdcayx+/tRqdsEAAAAAAOTqjcXdCwuHjpbL6QtVeeqFXnbBAAAAAADk
+        2m+tZY21KsNYvLS80kpfqNLn229nFw0AAAAAwG89/WI/66uVaXfPLCy0+keyFyp06frp7KIBAAAAAHgg
+        Dt2mbbVavfWFmEZR7uQvVuPdq69nFw4AAAAAwANx6DZtq1WKdcX7sfhW+mJVjl86kV04AAAAAAAPnP/q
+        VNZWK7Q7DMUxi+3yuxFvqMTzp1azCwcAAAAA4IGTH69nbbVCt+/H4mbRvTziDZX58qd3sosHAAAAAGBP
+        HLpNu2pVmp3uv+/H4njSXfqGKl383kPuAAAAAABGicO2aVOt2Nb9WLzQ6h8Z8YbKrF08nt0AAAAAAADO
+        DQ/bpk21Sovt8tyDWLz3kLud9E1VeXbtlewGAAAAAABwbnD80omsqVbp0NFyOY3Ft9I3Venv/zmb3QQA
+        AAAAgHn29c+bg6df7Gc9tUI7vwnFe7G4d2XEGysTT/NLbwQAAAAAwDz74Ns3s5ZasRtpK45YvD7ijZV5
+        pv/ysJKnNwMAAAAAYF699N6xrKVWqVl0L6eteGGhtb7UKMrd9M1VunT9dHYzAAAAAADm0efbbw+eeqGX
+        ddQqNTv9lTQVD6dRlNvpm6sUlTy9IQAAAAAA8+jdq69nDbVi+b7i/al7b3FU8qjl6U0BAAAAAJgnsbI3
+        VvemDbVi+b7i/al7b3HwoDsAAAAAYN6N4VTxQ/YV788Y9hY7XQwAAAAAzLsxnCp++L7i/Wl2yuvpF1XN
+        6WIAAAAAYF69/80bWTOtWrNT3knbcDbjWEURp4u3ftzIbhIAAAAAwCz78qd3xnKqOJ5fl7bhkdMoyrv5
+        F1er/dZadqMAAAAAAGZZbF1IW2kdlpZXWmkXHjmNovwi/eI6xHHr9GYBAAAAAMyi2LaQNtKa3Eqb8EMn
+        FhuP+AaVi+PWHnYHAAAAAMyD50+tZo20Ds1O+WHahH93GkX5S/pN6rC8aR0FAAAAADDbNj49mbXRmuwu
+        tFYOpz34d6dRlFsjvlEt4kalNw8AAAAAYBZ89MPZrInW6Ebagh89rf6RqMwjvlkt4oalNxEAAAAAYJrF
+        Gt5Yx5v20LrECuI0BT/WNIretfSb1cX+YgAAAABglnz98+ZwDW/aQmu0nTbgx58xny6OBc9f/vROdlMB
+        AAAAAKbNX/52LGugdVpsl+fSBPyHZpyni0OU9iju6Y0FAAAAAJgWaxePZ+2zZrfT9vvHZ8yni0MU9/Tm
+        AgAAAABMg5Mfr2fNs25PfKp4f+IJeek3r9tL7x1zwhgAAAAAmCqTEIoP5lTxvYkn5I37dHGIE8Z2GAMA
+        AAAA02ACVk8MHdip4v1pFOUX6Q8ZBw+9AwAAAAAmWWxIiE0Jadscj97NtPU++bTWlxpFeTf/YfV7du2V
+        wdaPG9mHAAAAAAAwTnHQdXlzLWuaY7J76Gi5nKbeA5k4rjziB47FUy/0Bue/OpV9GAAAAAAA4/D3/5wd
+        PNN/OWuZ49O7kjbeA51JeNjdr/UvvGotBQAAAAAwVpufncza5Tg1O+Wd2BaR9t0DnaXlldYkPOzu16LW
+        X7p+OvuAAAAAAACqFOty229NzNqJ+w78oXYPm0ZRbqU/fBL85W/HBv/831+zDwwAAAAA4CDFtoPTn7yW
+        NcoJcSNtutXN3sPubo34JcYudhlvfHpy+MTB9AMEAAAAAHhSH3z75oTtJv6Nuwut/pE06VY699ZR7Iz4
+        ZSbC0y/2h9HYPmMAAAAA4CC8/80bg2fXXsla5GTpractt5aJvRf5LzNZIhqf/HjdegoAAAAA4A/7fPvt
+        wbtXX5+CSBx6V9KGW+s0it61/JeaTLFoOuq/08YAAAAAwMPEittYNfHSe8eyxjjBttN2W/9M8P7ih4m9
+        xmsXjw8/8PiXgfSPAQAAAACYL9EJ46BpdMPYVpA2xQm3U/ue4ofNpO8vfpTnTqwOjl86MTj/1anBRz+c
+        dfIYAAAAAGZcdMA4TBpdMPpg2gynSawLTpvtWKfZ6a80inI3/UWnVfzrwfLm2vCPJR6Ut2/zs5PDqPzr
+        /w8AAAAAmByxYzhteKc/eW3Y+6Zj9/Dja3a6F9JWOxHTaHfPzFIwBgAAAACYXGN+oN2jJo485780AAAA
+        AAAHZ8JD8f7E0ef8lwcAAAAA4Ek1O+X1tMlO9DSKciu9CAAAAAAA/rypC8X7IxgDAAAAAByMqQ3F+2Ml
+        BQAAAADAk5n6ULw/9x56t5teIAAAAAAAjzIlD7N73Gm0u2caRbmTXygAAAAAAKPNWCjen2anvyIYAwAA
+        AAA8Wqz4TRvrTM2ho+VyoyhvpRcOAAAAAMDQTqz2TdvqbE5rfalR9K6NuAkAAAAAAPPs1kKrfyRNqjM/
+        9x58Zy0FAAAAAEBRfpE21LmapeWVlrUUAAAAAMAcu9tod8+k7XQ+Z7iWovxixE0CAAAAAJhhvZtzuXbi
+        UdPs9FecMgYAAAAA5sDd+XmI3RNMs9O9YJcxAAAAADCjvohtC2kXNQ+b1srhxXb53YgbCQAAAAAwjbYP
+        HS2X0xRqHnOaRXc1buKIGwsAAAAAMPGanfLOYrt3Pm2f5k/OvX3GN9IbDQAAAAAwoW7bS1zhLC2vtJqd
+        8vqIGw8AAAAAMAm2G+3umbRtmqqm1T/SKHrX4qmBIz4MAAAAAIBaNTvdfzeK3nqaMk2NE/s+9j6I/AMC
+        AAAAAKjQrWan/HChtXI47ZZmnNPqH2kW3cuNovxlxIcGAAAAAHAQfmkUvSuxMjdNlGYC594D8bYaRe9m
+        oyh3RnygAAAAAACPY/deZ9yK7pi2SDNlEx/ivVPHN8RjAAAAAOARtuP0cLPorqat0czYHDpaLscTCYcf
+        +N6+41sj/iAAAAAAgNkWKyVuRiccPhtNHDb7M4zIRW99z3CNxRUAAAAAYEbsHSBdF4Xz+X93sbAWyNNy
+        owAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
